--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -78,11 +78,11 @@
         </div>
         <div class="membro">
           Davi Santos
-          <p>Função: Dev Front-End</p>
+          <p>Função: Desenvolvedor Front-End &  Redator</p>
         </div>
         <div class="membro">
           Thales Grossi
-          <p>Função: Dev Front-End</p>
+          <p>Função: Designer UI/UX</p>
         </div>
       </div>
     </div>
